--- a/public/styles/checkout.css
+++ b/public/styles/checkout.css
@@ -301,4 +301,68 @@
 #button_purchased h2 {
   margin-right: 30px;
 }
+
+/* Media Queries */
+@media only screen and (max-width: 1496px) {
+  #checkout_div_wrapper {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 1230px) {
+  #checkout_div_wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #middle_row_checkout {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-item-align: center;
+        align-self: center;
+    width: 60%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #shipping_address_container {
+    width: 60%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  #shipping_methods_section {
+    margin: 0;
+  }
+  #payment_section {
+    margin: 0;
+  }
+  #order_summary_section {
+    width: 60%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
+@media only screen and (max-width: 590px) {
+  #shipping_address_container {
+    width: 95%;
+  }
+  #middle_row_checkout {
+    width: 95%;
+  }
+  #shipping_methods_section {
+    width: 100%;
+  }
+  #payment_section {
+    width: 100%;
+  }
+  #order_summary_section {
+    width: 95%;
+  }
+}
 /*# sourceMappingURL=checkout.css.map */
