--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -54,4 +54,14 @@
 .footer_link {
   margin-bottom: 15px;
 }
+
+/* media queires */
+@media only screen and (max-width: 670px) {
+  #outer_footer_container {
+    width: 95%;
+  }
+  .rights_container {
+    width: 90%;
+  }
+}
 /*# sourceMappingURL=footer.css.map */
