--- a/public/styles/footer.scss
+++ b/public/styles/footer.scss
@@ -58,3 +58,21 @@
     margin-bottom:  15px;
 
 }
+
+/* media queires */
+
+@media only screen and (max-width: 670px) {
+    
+    #outer_footer_container {
+
+        width: 95%;
+
+    }
+
+    .rights_container {
+
+        width: 90%;
+
+    }
+
+}
