remove all items on purchase and now show current username in nav

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -938,6 +938,15 @@
 }
 
 /* Media Queries */
+@media only screen and (max-width: 934px) {
+  #show_signIn {
+    display: none;
+  }
+  #show_username {
+    font-size: 20px;
+  }
+}
+
 @media only screen and (max-width: 770px) {
   #navigation_container {
     height: auto;
