--- a/public/styles/navigation.scss
+++ b/public/styles/navigation.scss
@@ -124,6 +124,22 @@
 
 /* Media Queries */ 
 
+@media only screen and (max-width: 934px) {
+
+    #show_signIn {
+
+        display: none;
+
+    }
+
+    #show_username {
+
+        font-size: 20px;
+
+    }
+
+}
+
 @media only screen and (max-width: 770px) {
 
     #navigation_container {
