--- a/public/styles/product_page.scss
+++ b/public/styles/product_page.scss
@@ -168,6 +168,12 @@ $inner_container_size: 70%;
     margin-left: 15px;
 }
 
+.star_ratings {
+
+    margin-bottom: 10px;
+
+}
+
 .item_button {
 
     background: linear-gradient(180deg, rgba(198,28,52,1) 14%, rgba(226,26,54,1) 52%, rgba(226,26,54,1) 83%, rgba(226,26,54,1) 92%, rgba(226,26,54,1) 100%);
