--- a/client/public/styles/main.scss
+++ b/client/public/styles/main.scss
@@ -1,3 +1,4 @@
+@import "./base_stylings.scss";
 @import "./home_page.scss";
 @import "./product_page.scss";
 @import "./header.scss";
@@ -7,6 +8,8 @@
 @import "./cart.scss";
 @import "./footer.scss";
 @import "./checkout.scss";
+@import "./create_account.scss";
+@import "./range_slider.scss";
 
 
 body {
